--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "ts-express-boilerplate",
-  "version": "0.0.0",
+  "name": "grow-bot",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "build": "yarn build:ts"
-    "build:ts": "tsc",
-    "start": "yarn serve",
-    "serve": "yarn watch | nodemon dist/main.js",
-    "watch": "yarn watch:ts"
-    "watch:ts": "tsc -w"
+    "build": "tsc",
+    "serve": "npm run watch | nodemon dist/main.js",
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "dependencies": {
-    "express": "^4.16.4"
+    "@types/node": "^14.0.26",
+    "configstore": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "opencv4nodejs": "^5.6.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
