--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "opencv4nodejs": "^5.6.0",
-    "socket.io": "^2.3.0"
+    "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^2.3.0",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
