--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "serve": "npm run watch | nodemon dist/main.js",
-    "watch": "tsc -w"
+    "watch": "npm run build && tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@types/node": "^14.0.26",
     "configstore": "^5.0.1",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "express": "^4.16.4",
     "opencv4nodejs": "^5.6.0",
     "pg": "^8.3.0",
